--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_gf"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.TransacaoActivity"></activity>
+        <activity android:name=".view.CadastraTransacaoActivity"></activity>
+        <activity android:name=".view.TransacaoFragment" />
         <activity android:name=".view.NovaContaFragment" />
-        <activity android:name=".view.CadastraConta" />
+        <activity android:name=".view.CadastraContaActivity" />
         <activity android:name=".view.ContaFragment" />
         <activity android:name=".view.MainActivity" />
         <activity android:name=".view.SplashScreenActivity">
